--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
 	"name": "NuxReworks",
 	"version_number": "1.0.0",
-	"website_url": "",
+	"website_url": "https://github.com/nuxlar/NuxReworks",
 	"description": "Something something reworks",
 	"dependencies": [
 		"bbepis-BepInExPack-5.4.9",
