--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
-	"name": "NuxReworks",
+	"name": "AugmentedStages",
 	"version_number": "1.0.0",
-	"website_url": "https://github.com/nuxlar/NuxReworks",
-	"description": "Something something reworks",
+	"website_url": "https://github.com/nuxlar/AugmentedStages",
+	"description": "Reworks monsters to spawn based on stage number",
 	"dependencies": [
 		"bbepis-BepInExPack-5.4.9",
 		"RiskofThunder-HookGenPatcher-1.2.1"
