--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
 	"name": "AugmentedStages",
-	"version_number": "1.0.0",
+	"version_number": "1.1.0",
 	"website_url": "https://github.com/nuxlar/AugmentedStages",
-	"description": "Reworks monsters to spawn based on stage number",
+	"description": "Changes monster stage spawns",
 	"dependencies": [
-		"bbepis-BepInExPack-5.4.9",
-		"RiskofThunder-HookGenPatcher-1.2.1"
+		"bbepis-BepInExPack-5.4.2103",
+		"RiskofThunder-HookGenPatcher-1.2.3"
 	]
 }
